# rag_engineering_playground

./: .env.example  .gitignore  BACKLOG.md  README.md
AgentContext/: AGENTS.md  multi_agent_playbook.md  multi_agent_system.md
Documentation/: AGENT_ROLE_IN_PROJECT.md  AGENT_WORKFLOW_STORY.md  ARCHITECTURE_OVERVIEW.md  EVALUATION_STORY.md  EXPERIMENTS_20Q_COMPARATIVE_REPORT.md  FEATURES_AND_CAPABILITIES.md  GOLDEN_DATASETS.md  KEY_TECHNICAL_DECISIONS.md  MCP_SERVERS_AND_TOOLS.md  OBSERVABILITY_STORY.md  PROJECT_OVERVIEW.md  README.md  REPOSITORY_MAP.md  RUN_FROM_ZERO.md  SPECIFICATION_FIRST_APPROACH.md  TAGGED_QUESTION_METRICS_REPORT.md
Execution/docker/: README.md  compose.yaml  rag.compose.yaml
Execution/evals/: __init__.py  build_request_summary.py  common.py  eval_engine.toml  eval_orchestrator.py  golden_question_tags.json  judge_generation.py  judge_retrieval.py  judge_transport.py  judge_usage.py  (+11 more)
Execution/otel_runtime_smoke/: Cargo.toml  README.md
Execution/otel_runtime_smoke/src/: main.rs
Execution/rag_runtime/: BACKLOG.md  Cargo.toml  Run1.txt  questions_5x4.txt  questions_corpus.txt  questions_same_20.txt  questions_same_5.txt  rag_runtime.toml  smoke_question.txt
Execution/rag_runtime/schemas/: rag_runtime_config.schema.json  rag_runtime_env.schema.json  request_capture.schema.json
Execution/rag_runtime/src/: lib.rs  main.rs  test_support.rs
Execution/rag_runtime/src/config/: mod.rs
Execution/rag_runtime/src/errors/: mod.rs
Execution/rag_runtime/src/generation/: mod.rs  ollama.rs  openai.rs  tokenizer.rs  transport.rs
Execution/rag_runtime/src/input_validation/: mod.rs
Execution/rag_runtime/src/models/: mod.rs
Execution/rag_runtime/src/observability/: mod.rs
Execution/rag_runtime/src/orchestration/: mod.rs
Execution/rag_runtime/src/request_capture_store/: mod.rs
Execution/rag_runtime/src/reranking/: cross_encoder.rs  helpers.rs  mod.rs  transport.rs
Execution/rag_runtime/src/reranking/transports/: mixedbread_ai.rs  mod.rs  voyageai.rs
Execution/rag_runtime/src/retrieval/: mod.rs
Execution/rag_runtime/src/retrieval_metrics/: mod.rs
Execution/rag_runtime/src/runtime_run_config_store/: mod.rs
Execution/rag_runtime/tests/: cross_encoder_contract.rs  e2e_smoke.rs
(+516 files in other folders)
