[package]
name = "otel_runtime_smoke"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "rt-tokio"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
