[package]
name = "rag_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
backon = "1.6"
bm25 = { version = "2.3.2", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dotenvy = "0.15"
jsonschema = { version = "0.29", default-features = false }
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "rt-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
toml = "0.9"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
uuid = { version = "1.18", features = ["serde", "v4", "v5"] }

[dev-dependencies]
axum = "0.8"
tempfile = "3.20"
